--- a/Flight_Prediction.ipynb
+++ b/Flight_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOimlXDu/IBtY+xsVtqzKN",
+      "authorship_tag": "ABX9TyOUsUWLwhqPuYU1/NIdjwng",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3982,7 +3982,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Key Insights from Exploratory Data Analysis\n",
+        "## Key Insights  \n",
         "\n",
         "- Flight duration shows a strong positive relationship with ticket price.\n",
         "  Longer flights, especially those with multiple stops, tend to be more expensive.\n",
